impl create user_interest
