# routers/commentsRouter_controllers.go
@@ -16,51 +16,6 @@ func init() {
             Filters: nil,
             Params: nil})
 
-    beego.GlobalControllerRouter["quatrains-go/controllers:ObjectController"] = append(beego.GlobalControllerRouter["quatrains-go/controllers:ObjectController"],
-        beego.ControllerComments{
-            Method: "Post",
-            Router: `/`,
-            AllowHTTPMethods: []string{"post"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["quatrains-go/controllers:ObjectController"] = append(beego.GlobalControllerRouter["quatrains-go/controllers:ObjectController"],
-        beego.ControllerComments{
-            Method: "GetAll",
-            Router: `/`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["quatrains-go/controllers:ObjectController"] = append(beego.GlobalControllerRouter["quatrains-go/controllers:ObjectController"],
-        beego.ControllerComments{
-            Method: "Get",
-            Router: `/:objectId`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["quatrains-go/controllers:ObjectController"] = append(beego.GlobalControllerRouter["quatrains-go/controllers:ObjectController"],
-        beego.ControllerComments{
-            Method: "Put",
-            Router: `/:objectId`,
-            AllowHTTPMethods: []string{"put"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["quatrains-go/controllers:ObjectController"] = append(beego.GlobalControllerRouter["quatrains-go/controllers:ObjectController"],
-        beego.ControllerComments{
-            Method: "Delete",
-            Router: `/:objectId`,
-            AllowHTTPMethods: []string{"delete"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
     beego.GlobalControllerRouter["quatrains-go/controllers:PoetryController"] = append(beego.GlobalControllerRouter["quatrains-go/controllers:PoetryController"],
         beego.ControllerComments{
             Method: "GetDailyPoetry",
@@ -70,65 +25,11 @@ func init() {
             Filters: nil,
             Params: nil})
 
-    beego.GlobalControllerRouter["quatrains-go/controllers:UserController"] = append(beego.GlobalControllerRouter["quatrains-go/controllers:UserController"],
+    beego.GlobalControllerRouter["quatrains-go/controllers:UserInterestController"] = append(beego.GlobalControllerRouter["quatrains-go/controllers:UserInterestController"],
         beego.ControllerComments{
-            Method: "Post",
+            Method: "CreateUserInterest",
             Router: `/`,
             AllowHTTPMethods: []string{"post"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["quatrains-go/controllers:UserController"] = append(beego.GlobalControllerRouter["quatrains-go/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "GetAll",
-            Router: `/`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["quatrains-go/controllers:UserController"] = append(beego.GlobalControllerRouter["quatrains-go/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Get",
-            Router: `/:uid`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["quatrains-go/controllers:UserController"] = append(beego.GlobalControllerRouter["quatrains-go/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Put",
-            Router: `/:uid`,
-            AllowHTTPMethods: []string{"put"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["quatrains-go/controllers:UserController"] = append(beego.GlobalControllerRouter["quatrains-go/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Delete",
-            Router: `/:uid`,
-            AllowHTTPMethods: []string{"delete"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["quatrains-go/controllers:UserController"] = append(beego.GlobalControllerRouter["quatrains-go/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Login",
-            Router: `/login`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["quatrains-go/controllers:UserController"] = append(beego.GlobalControllerRouter["quatrains-go/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Logout",
-            Router: `/logout`,
-            AllowHTTPMethods: []string{"get"},
             MethodParams: param.Make(),
             Filters: nil,
             Params: nil})
