# swagger/swagger.json
@@ -64,6 +64,30 @@
                     }
                 }
             }
+        },
+        "/user/interests/": {
+            "post": {
+                "tags": [
+                    "user/interests"
+                ],
+                "description": "get all Interests",
+                "operationId": "UserInterestController.CreateUserInterest",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "true",
+                        "schema": {
+                            "$ref": "#/definitions/models.UserInterestReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -161,6 +185,19 @@
                 },
                 "title_tr": {
                     "type": "string"
+                }
+            }
+        },
+        "models.UserInterestReq": {
+            "title": "UserInterestReq",
+            "type": "object",
+            "properties": {
+                "interest_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer",
+                        "format": "int64"
+                    }
                 }
             }
         }
